Fixed paddding on small screens for page content.

--- a/src/app/pages/bookkeep-view-all/bookkeep-view-all.component.css
+++ b/src/app/pages/bookkeep-view-all/bookkeep-view-all.component.css
@@ -101,9 +101,7 @@ tr,
         padding: var(--small-s);
     }
 
-    .row {
-        padding: 0px var(--small-s);
-    }
+    
 
 }
 
